@@ -1,4 +1,5 @@
 current:
+  * fix iPhone async ref bug
   * enhance iPhone readertest w/more options
   * fix C++ video callback bug
     - add C and C++ processor examples
